vercre-issuer/tests/snapshots/credential@issuer:deferred.snap
---
source: vercre-issuer/tests/wallet.rs
assertion_line: 181
expression: vc
---
"@context":
  - "https://www.w3.org/2018/credentials/v1"
  - "http://vercre.io/credentials/v1"
id: "http://vercre.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
name:
  "@value": Employee ID
  "@language": en-NZ
description:
  "@value": Vercre employee ID credential
  "@language": en-NZ
issuer: "http://vercre.io"
credentialSubject:
  address:
    locality: Wellington
    street_address: 123 Fake St
  email: pending.user@example.com
  family_name: Person
  given_name: Pending
  id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
validFrom: "[validFrom]"
