vercre-issuer/tests/snapshots/credential@pre-authorized:deferred.snap
---
source: vercre-issuer/tests/wallet.rs
assertion_line: 160
expression: vc
---
"@context":
  - "https://www.w3.org/2018/credentials/v1"
  - "http://vercre.io/credentials/v1"
id: "http://vercre.io/credentials/EmployeeIDCredential"
type:
  - VerifiableCredential
  - EmployeeIDCredential
issuer: "http://vercre.io"
issuanceDate: "[issuanceDate]"
credentialSubject:
  email: pending.user@example.com
  familyName: Person
  givenName: Pending
  id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
  proficiency: "1"
